--- a/src/CSS/Header.scss
+++ b/src/CSS/Header.scss
@@ -24,6 +24,7 @@
         height: inherit;
         position: absolute;
         left: 0;
+        z-index: -1;
 
         .dark-mode{
           width: inherit;
@@ -35,11 +36,22 @@
             height: 40px;
             width: 40px;
             margin: 5px -20px;
-            background:yellow;
-            box-shadow: 0 0 10px yellow,
-                          0 0 60px yellow,
-                          0 0 200px white,
-                          inset 0 0 80px white;
+            background: yellow;
+            box-shadow: 0 0 6px yellow,
+                          0 0 10px yellow,
+                          0 0 10px white,
+                          inset 0 0 25px white;
+          }
+
+          .moon-cover{
+            // display:inline-block;
+            border-radius:50%;
+            height: 45px;
+            width: 45px;
+            margin: -11px 11px;
+            background: var(--header-background);
+            mix-blend-mode: inherit;
+            transition: .3s;
           }
 
           .cloud {
@@ -116,7 +128,7 @@
         font-size: 1.5em;
         position: absolute;
         right: 0;
-        padding-right: 15px;
+        padding-right: 10px;
         cursor: pointer;
       }
       
